--- a/result/2022-01-09.md
+++ b/result/2022-01-09.md
@@ -43,3 +43,4 @@
 43. [长延堡街道](https://s.weibo.com//weibo?q=%E9%95%BF%E5%BB%B6%E5%A0%A1%E8%A1%97%E9%81%93&Refer=top) 166690
 44. [深圳封控区一日三餐免费提供](https://s.weibo.com//weibo?q=%23%E6%B7%B1%E5%9C%B3%E5%B0%81%E6%8E%A7%E5%8C%BA%E4%B8%80%E6%97%A5%E4%B8%89%E9%A4%90%E5%85%8D%E8%B4%B9%E6%8F%90%E4%BE%9B%23&Refer=top) 165495
 45. [2021王者荣耀挑战者杯](https://s.weibo.com//weibo?q=2021%E7%8E%8B%E8%80%85%E8%8D%A3%E8%80%80%E6%8C%91%E6%88%98%E8%80%85%E6%9D%AF&Refer=top) 44895
+46. [3X3黄金联赛](https://s.weibo.com//weibo?q=3X3%E9%BB%84%E9%87%91%E8%81%94%E8%B5%9B&Refer=top) 16912
