--- a/result/2022-01-10.md
+++ b/result/2022-01-10.md
@@ -46,4 +46,5 @@
 46. [拥有一双好看的手是什么体验](https://s.weibo.com//weibo?q=%23%E6%8B%A5%E6%9C%89%E4%B8%80%E5%8F%8C%E5%A5%BD%E7%9C%8B%E7%9A%84%E6%89%8B%E6%98%AF%E4%BB%80%E4%B9%88%E4%BD%93%E9%AA%8C%23&Refer=top) 96805
 47. [天津加强离津管理](https://s.weibo.com//weibo?q=%23%E5%A4%A9%E6%B4%A5%E5%8A%A0%E5%BC%BA%E7%A6%BB%E6%B4%A5%E7%AE%A1%E7%90%86%23&Refer=top) 92264
 48. [天津校园封闭式管理](https://s.weibo.com//weibo?q=%23%E5%A4%A9%E6%B4%A5%E6%A0%A1%E5%9B%AD%E5%B0%81%E9%97%AD%E5%BC%8F%E7%AE%A1%E7%90%86%23&Refer=top) 72674
-49. [18米高巨型雪人亮相松花江畔](https://s.weibo.com//weibo?q=%2318%E7%B1%B3%E9%AB%98%E5%B7%A8%E5%9E%8B%E9%9B%AA%E4%BA%BA%E4%BA%AE%E7%9B%B8%E6%9D%BE%E8%8A%B1%E6%B1%9F%E7%95%94%23&Refer=top) 47771
+49. [18米高巨型雪人亮相松花江畔](https://s.weibo.com//weibo?q=%2318%E7%B1%B3%E9%AB%98%E5%B7%A8%E5%9E%8B%E9%9B%AA%E4%BA%BA%E4%BA%AE%E7%9B%B8%E6%9D%BE%E8%8A%B1%E6%B1%9F%E7%95%94%23&Refer=top) 51272
+50. [意大利飞印度航班125人被检出新冠阳性](https://s.weibo.com//weibo?q=%23%E6%84%8F%E5%A4%A7%E5%88%A9%E9%A3%9E%E5%8D%B0%E5%BA%A6%E8%88%AA%E7%8F%AD125%E4%BA%BA%E8%A2%AB%E6%A3%80%E5%87%BA%E6%96%B0%E5%86%A0%E9%98%B3%E6%80%A7%23&Refer=top) 31943
