--- a/result/2022-01-10.md
+++ b/result/2022-01-10.md
@@ -49,5 +49,6 @@
 49. [天津校园封闭式管理](https://s.weibo.com//weibo?q=%23%E5%A4%A9%E6%B4%A5%E6%A0%A1%E5%9B%AD%E5%B0%81%E9%97%AD%E5%BC%8F%E7%AE%A1%E7%90%86%23&Refer=top) 72674
 50. [18米高巨型雪人亮相松花江畔](https://s.weibo.com//weibo?q=%2318%E7%B1%B3%E9%AB%98%E5%B7%A8%E5%9E%8B%E9%9B%AA%E4%BA%BA%E4%BA%AE%E7%9B%B8%E6%9D%BE%E8%8A%B1%E6%B1%9F%E7%95%94%23&Refer=top) 53612
 51. [男孩过马路被撞飞爸爸愤怒拍打肇事车辆](https://s.weibo.com//weibo?q=%23%E7%94%B7%E5%AD%A9%E8%BF%87%E9%A9%AC%E8%B7%AF%E8%A2%AB%E6%92%9E%E9%A3%9E%E7%88%B8%E7%88%B8%E6%84%A4%E6%80%92%E6%8B%8D%E6%89%93%E8%82%87%E4%BA%8B%E8%BD%A6%E8%BE%86%23&Refer=top) 47768
-52. [小小年纪完全没有社恐](https://s.weibo.com//weibo?q=%23%E5%B0%8F%E5%B0%8F%E5%B9%B4%E7%BA%AA%E5%AE%8C%E5%85%A8%E6%B2%A1%E6%9C%89%E7%A4%BE%E6%81%90%23&Refer=top) 33125
-53. [怎么理解寡言无声的父爱](https://s.weibo.com//weibo?q=%23%E6%80%8E%E4%B9%88%E7%90%86%E8%A7%A3%E5%AF%A1%E8%A8%80%E6%97%A0%E5%A3%B0%E7%9A%84%E7%88%B6%E7%88%B1%23&Refer=top) 15508
+52. [小小年纪完全没有社恐](https://s.weibo.com//weibo?q=%23%E5%B0%8F%E5%B0%8F%E5%B9%B4%E7%BA%AA%E5%AE%8C%E5%85%A8%E6%B2%A1%E6%9C%89%E7%A4%BE%E6%81%90%23&Refer=top) 35985
+53. [怎么理解寡言无声的父爱](https://s.weibo.com//weibo?q=%23%E6%80%8E%E4%B9%88%E7%90%86%E8%A7%A3%E5%AF%A1%E8%A8%80%E6%97%A0%E5%A3%B0%E7%9A%84%E7%88%B6%E7%88%B1%23&Refer=top) 18280
+54. [新年绝美派对妆](https://s.weibo.com//weibo?q=%23%E6%96%B0%E5%B9%B4%E7%BB%9D%E7%BE%8E%E6%B4%BE%E5%AF%B9%E5%A6%86%23&Refer=top) 13567
