--- a/result/2022-01-11.md
+++ b/result/2022-01-11.md
@@ -40,3 +40,4 @@
 40. [FPX战胜RNG](https://s.weibo.com//weibo?q=%23FPX%E6%88%98%E8%83%9CRNG%23&Refer=top) 123087
 41. [今天腊八](https://s.weibo.com//weibo?q=%23%E4%BB%8A%E5%A4%A9%E8%85%8A%E5%85%AB%23&Refer=top) 117056
 42. [把太空步玩明白了](https://s.weibo.com//weibo?q=%23%E6%8A%8A%E5%A4%AA%E7%A9%BA%E6%AD%A5%E7%8E%A9%E6%98%8E%E7%99%BD%E4%BA%86%23&Refer=top) 108876
+43. [自画像挑战算是被玩明白了](https://s.weibo.com//weibo?q=%23%E8%87%AA%E7%94%BB%E5%83%8F%E6%8C%91%E6%88%98%E7%AE%97%E6%98%AF%E8%A2%AB%E7%8E%A9%E6%98%8E%E7%99%BD%E4%BA%86%23&Refer=top) 92089
