--- a/result/2022-01-11.md
+++ b/result/2022-01-11.md
@@ -41,3 +41,4 @@
 41. [今天腊八](https://s.weibo.com//weibo?q=%23%E4%BB%8A%E5%A4%A9%E8%85%8A%E5%85%AB%23&Refer=top) 117056
 42. [把太空步玩明白了](https://s.weibo.com//weibo?q=%23%E6%8A%8A%E5%A4%AA%E7%A9%BA%E6%AD%A5%E7%8E%A9%E6%98%8E%E7%99%BD%E4%BA%86%23&Refer=top) 108876
 43. [自画像挑战算是被玩明白了](https://s.weibo.com//weibo?q=%23%E8%87%AA%E7%94%BB%E5%83%8F%E6%8C%91%E6%88%98%E7%AE%97%E6%98%AF%E8%A2%AB%E7%8E%A9%E6%98%8E%E7%99%BD%E4%BA%86%23&Refer=top) 92089
+44. [迟到扣1000当事老板回应](https://s.weibo.com//weibo?q=%23%E8%BF%9F%E5%88%B0%E6%89%A31000%E5%BD%93%E4%BA%8B%E8%80%81%E6%9D%BF%E5%9B%9E%E5%BA%94%23&Refer=top) 52093
