--- a/result/2022-01-11.md
+++ b/result/2022-01-11.md
@@ -49,4 +49,5 @@
 49. [人民文学出版社推书致敬中国警察](https://s.weibo.com//weibo?q=%23%E4%BA%BA%E6%B0%91%E6%96%87%E5%AD%A6%E5%87%BA%E7%89%88%E7%A4%BE%E6%8E%A8%E4%B9%A6%E8%87%B4%E6%95%AC%E4%B8%AD%E5%9B%BD%E8%AD%A6%E5%AF%9F%23&Refer=top) 34948
 50. [张文宏警察节用书评向警察致敬](https://s.weibo.com//weibo?q=%23%E5%BC%A0%E6%96%87%E5%AE%8F%E8%AD%A6%E5%AF%9F%E8%8A%82%E7%94%A8%E4%B9%A6%E8%AF%84%E5%90%91%E8%AD%A6%E5%AF%9F%E8%87%B4%E6%95%AC%23&Refer=top) 33850
 51. [太行山冬日冰瀑奇景](https://s.weibo.com//weibo?q=%23%E5%A4%AA%E8%A1%8C%E5%B1%B1%E5%86%AC%E6%97%A5%E5%86%B0%E7%80%91%E5%A5%87%E6%99%AF%23&Refer=top) 28230
-52. [天津疫情呈现传播快隐蔽强穿透力强特点](https://s.weibo.com//weibo?q=%23%E5%A4%A9%E6%B4%A5%E7%96%AB%E6%83%85%E5%91%88%E7%8E%B0%E4%BC%A0%E6%92%AD%E5%BF%AB%E9%9A%90%E8%94%BD%E5%BC%BA%E7%A9%BF%E9%80%8F%E5%8A%9B%E5%BC%BA%E7%89%B9%E7%82%B9%23&Refer=top) 16943
+52. [天津疫情呈现传播快隐蔽强穿透力强特点](https://s.weibo.com//weibo?q=%23%E5%A4%A9%E6%B4%A5%E7%96%AB%E6%83%85%E5%91%88%E7%8E%B0%E4%BC%A0%E6%92%AD%E5%BF%AB%E9%9A%90%E8%94%BD%E5%BC%BA%E7%A9%BF%E9%80%8F%E5%8A%9B%E5%BC%BA%E7%89%B9%E7%82%B9%23&Refer=top) 27621
+53. [赵明称折叠屏进入主力机时代](https://s.weibo.com//weibo?q=%23%E8%B5%B5%E6%98%8E%E7%A7%B0%E6%8A%98%E5%8F%A0%E5%B1%8F%E8%BF%9B%E5%85%A5%E4%B8%BB%E5%8A%9B%E6%9C%BA%E6%97%B6%E4%BB%A3%23&Refer=top) 16476
